[gd_scene load_steps=13 format=3 uid="uid://sepa3c7lc5it"]

[ext_resource type="Script" path="res://scripts/placesScript.gd" id="1_p2i7n"]
[ext_resource type="Script" path="res://scripts/incScript.gd" id="1_shp3i"]
[ext_resource type="PackedScene" uid="uid://4xihol23ienn" path="res://scenes/numplace_ctrl.tscn" id="1_xbf3u"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_exic8"]

[sub_resource type="InputEventKey" id="InputEventKey_oc7u7"]
device = -1
keycode = 4194320

[sub_resource type="Shortcut" id="Shortcut_rm8xy"]
events = [SubResource("InputEventKey_oc7u7")]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_erxo2"]

[sub_resource type="InputEventKey" id="InputEventKey_4k0gm"]
device = -1
keycode = 4194322

[sub_resource type="Shortcut" id="Shortcut_xs1hu"]
events = [SubResource("InputEventKey_4k0gm")]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lqaf2"]

[sub_resource type="InputEventKey" id="InputEventKey_n30n1"]
device = -1
keycode = 4194325
physical_keycode = 4194325
key_label = 4194325

[sub_resource type="Shortcut" id="Shortcut_axlvu"]
events = [SubResource("InputEventKey_n30n1")]

[node name="Main" type="Node"]

[node name="MarginContainerMain" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="HSplitContainer" type="HSplitContainer" parent="MarginContainerMain"]
layout_direction = 3
layout_mode = 2
theme_override_constants/separation = 5
split_offset = 800

[node name="VBoxMain" type="VBoxContainer" parent="MarginContainerMain/HSplitContainer"]
layout_mode = 2
alignment = 1

[node name="placesCon" type="HBoxContainer" parent="MarginContainerMain/HSplitContainer/VBoxMain"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1
script = ExtResource("1_p2i7n")

[node name="Numplace0" parent="MarginContainerMain/HSplitContainer/VBoxMain/placesCon" instance=ExtResource("1_xbf3u")]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainerMain/HSplitContainer/VBoxMain"]
layout_mode = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 100

[node name="LineEdit" type="LineEdit" parent="MarginContainerMain/HSplitContainer/VBoxMain/MarginContainer"]
custom_minimum_size = Vector2(120, 45)
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 1
theme_override_font_sizes/font_size = 27
placeholder_text = "000"
alignment = 1
max_length = 10
expand_to_text_length = true
deselect_on_focus_loss_enabled = false
select_all_on_focus = true

[node name="VBoxInc" type="VBoxContainer" parent="MarginContainerMain/HSplitContainer"]
layout_mode = 2
alignment = 1
script = ExtResource("1_shp3i")

[node name="buttonAdd" type="Button" parent="MarginContainerMain/HSplitContainer/VBoxInc"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
size_flags_stretch_ratio = 2.25
theme_override_font_sizes/font_size = 35
theme_override_styles/focus = SubResource("StyleBoxEmpty_exic8")
action_mode = 0
shortcut = SubResource("Shortcut_rm8xy")
text = "+"

[node name="incEdit" type="LineEdit" parent="MarginContainerMain/HSplitContainer/VBoxInc"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_font_sizes/font_size = 27
placeholder_text = "001"
alignment = 1
max_length = 10
expand_to_text_length = true
select_all_on_focus = true

[node name="buttonSub" type="Button" parent="MarginContainerMain/HSplitContainer/VBoxInc"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
size_flags_stretch_ratio = 2.25
theme_override_font_sizes/font_size = 35
theme_override_styles/focus = SubResource("StyleBoxEmpty_erxo2")
action_mode = 0
shortcut = SubResource("Shortcut_xs1hu")
text = "-"

[node name="CheckButton" type="CheckButton" parent="MarginContainerMain/HSplitContainer/VBoxInc"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_lqaf2")
action_mode = 0
shortcut = SubResource("Shortcut_axlvu")
text = "MODE"
alignment = 1
icon_alignment = 2
vertical_icon_alignment = 2

[connection signal="text_submitted" from="MarginContainerMain/HSplitContainer/VBoxMain/MarginContainer/LineEdit" to="MarginContainerMain/HSplitContainer/VBoxMain/placesCon" method="_on_line_edit_text_submitted"]
[connection signal="button_up" from="MarginContainerMain/HSplitContainer/VBoxInc/buttonAdd" to="MarginContainerMain/HSplitContainer/VBoxInc" method="_on_button_add_button_up"]
[connection signal="pressed" from="MarginContainerMain/HSplitContainer/VBoxInc/buttonAdd" to="MarginContainerMain/HSplitContainer/VBoxInc" method="_on_button_add_pressed"]
[connection signal="text_submitted" from="MarginContainerMain/HSplitContainer/VBoxInc/incEdit" to="MarginContainerMain/HSplitContainer/VBoxInc" method="_on_inc_edit_text_submitted"]
[connection signal="button_up" from="MarginContainerMain/HSplitContainer/VBoxInc/buttonSub" to="MarginContainerMain/HSplitContainer/VBoxInc" method="_on_button_sub_button_up"]
[connection signal="pressed" from="MarginContainerMain/HSplitContainer/VBoxInc/buttonSub" to="MarginContainerMain/HSplitContainer/VBoxInc" method="_on_button_sub_pressed"]
[connection signal="toggled" from="MarginContainerMain/HSplitContainer/VBoxInc/CheckButton" to="MarginContainerMain/HSplitContainer/VBoxInc" method="_on_check_button_toggled"]
